Update to Index

--- a/pages/education.html
+++ b/pages/education.html
@@ -19,7 +19,7 @@
 <body>
   <nav class="navbar">
         <div class="navbar__container">
-           <a href="/home.html" id="navbar__logo">
+           <a href="/index.html" id="navbar__logo">
             <img src="/images/JakeFrenchProfile.png" alt="Logo" class="navbar__logo-img"/>Jake French</a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
@@ -28,7 +28,7 @@
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="/home.html" class="navbar__links">Home</a>
+                    <a href="/index.html" class="navbar__links">Home</a>
                 </li>
                 <li class="navbar__item">
                     <a href="/pages/aboutme.html" class="navbar__links">About Me</a>
