--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <nav class="navbar">
     <div class="navbar__container">
-      <a href="/home.html" id="navbar__logo">
+      <a href="/index.html" id="navbar__logo">
         <img src="/images/JakeFrenchProfile.png" alt="Logo" class="navbar__logo-img" />Jake French
       </a>
       <div class="navbar__toggle" id="mobile-menu">
@@ -26,7 +26,7 @@
         <span class="bar"></span>
       </div>
       <ul class="navbar__menu">
-        <li class="navbar__item"><a href="/home.html" class="navbar__links">Home</a></li>
+        <li class="navbar__item"><a href="/index.html" class="navbar__links">Home</a></li>
         <li class="navbar__item"><a href="/pages/aboutme.html" class="navbar__links">About Me</a></li>
         <li class="navbar__btn"><a href="/pages/contactme.html" class="button">Connect With Me!</a></li>
       </ul>
