Update to github link

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -78,7 +78,7 @@
           <li>Implemented a clean and modern UI theme inspired by professional enterprise websites, with animated SVG backgrounds and smooth scroll effects.</li>
           <li>Utilized modular CSS and JavaScript for better maintainability and mobile responsiveness.</li>
           <li>Tested across multiple devices and browsers to ensure a consistent user experience and accessibility compliance.</li>
-          <li><a href="https://github.com/FrenchJake" target="_blank" rel="noopener noreferrer">View source code</a></li>
+          <li><a href="https://github.com/FrenchJake/personal-website.git" target="_blank" rel="noopener noreferrer">View source code</a></li>
         </ul>
       </div>
     </div>
