Update to relative paths

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Jakes Website</title>
-  <link rel="stylesheet" href="/design/styles.css" />
+  <link rel="stylesheet" href="design/styles.css" />
   <link
     rel="stylesheet"
     href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
@@ -17,8 +17,8 @@
 <body>
   <nav class="navbar">
     <div class="navbar__container">
-      <a href="/index.html" id="navbar__logo">
-        <img src="/images/JakeFrenchProfile.png" alt="Logo" class="navbar__logo-img" />Jake French
+      <a href="index.html" id="navbar__logo">
+        <img src="images/JakeFrenchProfile.png" alt="Logo" class="navbar__logo-img" />Jake French
       </a>
       <div class="navbar__toggle" id="mobile-menu">
         <span class="bar"></span>
@@ -26,9 +26,9 @@
         <span class="bar"></span>
       </div>
       <ul class="navbar__menu">
-        <li class="navbar__item"><a href="/index.html" class="navbar__links">Home</a></li>
-        <li class="navbar__item"><a href="/pages/aboutme.html" class="navbar__links">About Me</a></li>
-        <li class="navbar__btn"><a href="/pages/contactme.html" class="button">Connect With Me!</a></li>
+        <li class="navbar__item"><a href="index.html" class="navbar__links">Home</a></li>
+        <li class="navbar__item"><a href="pages/aboutme.html" class="navbar__links">About Me</a></li>
+        <li class="navbar__btn"><a href="pages/contactme.html" class="button">Connect With Me!</a></li>
       </ul>
     </div>
   </nav>
@@ -42,7 +42,7 @@
         <h1>All About</h1>
         <h2>Jake French</h2>
         <p>See what makes me different.</p>
-        <button class="main__btn"><a href="/pages/aboutme.html">Click Here</a></button>
+        <button class="main__btn"><a href="pages/aboutme.html">Click Here</a></button>
       </div>
       <div class="main__img--container">
         <img src="images/homepage/FrenchHome.png" alt="pic" id="main__img" />
@@ -53,22 +53,22 @@
   <section id="services" class="services">
     <h1>See what the hype is about</h1>
     <div class="services__container">
-      <a href="/pages/softwareDev.html" class="services__card" tabindex="0" role="button">
+      <a href="pages/softwareDev.html" class="services__card" tabindex="0" role="button">
         <h2>Software Developer</h2>
         <p>Fast Enterprises, Full-Stack Development</p>
       </a>
 
-      <a href="/pages/education.html" class="services__card" tabindex="0" role="button">
+      <a href="pages/education.html" class="services__card" tabindex="0" role="button">
         <h2>Education & Certifications</h2>
         <p>University of Alabama, MIS</p>
       </a>
 
-      <a href="/pages/experiences.html" class="services__card" tabindex="0" role="button">
+      <a href="pages/experiences.html" class="services__card" tabindex="0" role="button">
         <h2>Professional Experiences</h2>
         <p>Kirkland & Ellis, MAX Digital, Cubs</p>
       </a>
 
-      <a href="/pages/projects.html" class="services__card" tabindex="0" role="button">
+      <a href="pages/projects.html" class="services__card" tabindex="0" role="button">
         <h2>Projects</h2>
         <p>Scheduling App, Data Tools, Security</p>
       </a>
@@ -99,14 +99,14 @@
     </div>
 
     <div class="footer__bottom">
-      <a href="/" class="footer__logo">
+      <a href="index.html" class="footer__logo">
         <i class="fas fa-gem"></i> Jake French
       </a>
       <p class="website__rights">© Jake French 2025. All rights reserved.</p>
     </div>
   </footer>
 
-  <script src="/javascript/app.js"></script>
-  <script src="/javascript/svgBackground.js"></script>
+  <script src="javascript/app.js"></script>
+  <script src="javascript/svgBackground.js"></script>
 </body>
 </html>
