--- a/pages/contactme.html
+++ b/pages/contactme.html
@@ -6,7 +6,7 @@
   <title>Jake French | Contact Me</title>
 
   <!-- Styles -->
-  <link rel="stylesheet" href="/design/contactme.css" />
+  <link rel="stylesheet" href="../design/contactme.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap" rel="stylesheet" />
 
@@ -59,16 +59,16 @@
   <!-- Navbar -->
   <nav class="navbar">
     <div class="navbar__container">
-      <a href="/index.html" id="navbar__logo">
-        <img src="/images/JakeFrenchProfile.png" alt="Logo" class="navbar__logo-img" />Jake French
+      <a href="../index.html" id="navbar__logo">
+        <img src="../images/JakeFrenchProfile.png" alt="Logo" class="navbar__logo-img" />Jake French
       </a>
       <div class="navbar__toggle" id="mobile-menu">
         <span class="bar"></span><span class="bar"></span><span class="bar"></span>
       </div>
       <ul class="navbar__menu">
-        <li class="navbar__item"><a href="/index.html" class="navbar__links">Home</a></li>
-        <li class="navbar__item"><a href="/pages/aboutme.html" class="navbar__links">About Me</a></li>
-        <li class="navbar__btn"><a href="/pages/contactme.html" class="button">Connect With Me!</a></li>
+        <li class="navbar__item"><a href="../index.html" class="navbar__links">Home</a></li>
+        <li class="navbar__item"><a href="aboutme.html" class="navbar__links">About Me</a></li>
+        <li class="navbar__btn"><a href="contactme.html" class="button">Connect With Me!</a></li>
       </ul>
     </div>
   </nav>
@@ -94,6 +94,6 @@
   </main>
 
   <!-- Additional Scripts -->
-  <script src="/javascript/svgBackground.js"></script>
+  <script src="../javascript/svgBackground.js"></script>
 </body>
 </html>
