--- a/pages/education.html
+++ b/pages/education.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Jakes Website</title>
-  <link rel="stylesheet" href="/design/eduction.css"/>
+  <link rel="stylesheet" href="../design/eduction.css"/>
   <link
     rel="stylesheet"
     href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
@@ -18,27 +18,28 @@
 </head>
 <body>
   <nav class="navbar">
-        <div class="navbar__container">
-           <a href="/index.html" id="navbar__logo">
-            <img src="/images/JakeFrenchProfile.png" alt="Logo" class="navbar__logo-img"/>Jake French</a>
-            <div class="navbar__toggle" id="mobile-menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
-            <ul class="navbar__menu">
-                <li class="navbar__item">
-                    <a href="/index.html" class="navbar__links">Home</a>
-                </li>
-                <li class="navbar__item">
-                    <a href="/pages/aboutme.html" class="navbar__links">About Me</a>
-                </li>
-                <li class="navbar__btn"> 
-                    <a href="/pages/contactme.html" class="button">Connect With Me!</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    <div class="navbar__container">
+      <a href="../index.html" id="navbar__logo">
+        <img src="../images/JakeFrenchProfile.png" alt="Logo" class="navbar__logo-img"/>Jake French
+      </a>
+      <div class="navbar__toggle" id="mobile-menu">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
+      <ul class="navbar__menu">
+        <li class="navbar__item">
+          <a href="../index.html" class="navbar__links">Home</a>
+        </li>
+        <li class="navbar__item">
+          <a href="aboutme.html" class="navbar__links">About Me</a>
+        </li>
+        <li class="navbar__btn"> 
+          <a href="contactme.html" class="button">Connect With Me!</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
   <!-- Hero Section with Background Image -->
   <section class="hero-education">
@@ -64,7 +65,7 @@
       </p>
       <p>
         During my time at Alabama, I worked on several impactful projects, including a full redesign of the internal scheduling system for the College of Business.
-      <a href="/pages/projects.html"> See full project details</a>
+        <a href="projects.html">See full project details</a>
       </p>
 
       <div>
@@ -87,9 +88,8 @@
         <span class="badge">Google Data Analytics – Planned</span>
       </div>
     </div>
-
   </section>
-  <script src="/javascript/education.js"></script>
 
+  <script src="../javascript/education.js"></script>
 </body>
 </html>
