--- a/pages/projects.html
+++ b/pages/projects.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Jakes Website</title>
-  <link rel="stylesheet" href="/design/projects.css" />
+  <link rel="stylesheet" href="../design/projects.css" />
   <link
     rel="stylesheet"
     href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
@@ -19,8 +19,9 @@
 <body>
   <nav class="navbar">
     <div class="navbar__container">
-      <a href="/index.html" id="navbar__logo">
-        <img src="/images/JakeFrenchProfile.png" alt="Logo" class="navbar__logo-img" />Jake French</a>
+      <a href="../index.html" id="navbar__logo">
+        <img src="../images/JakeFrenchProfile.png" alt="Logo" class="navbar__logo-img" />Jake French
+      </a>
       <div class="navbar__toggle" id="mobile-menu">
         <span class="bar"></span>
         <span class="bar"></span>
@@ -28,13 +29,13 @@
       </div>
       <ul class="navbar__menu">
         <li class="navbar__item">
-          <a href="/index.html" class="navbar__links">Home</a>
+          <a href="../index.html" class="navbar__links">Home</a>
         </li>
         <li class="navbar__item">
-          <a href="/pages/aboutme.html" class="navbar__links">About Me</a>
+          <a href="aboutme.html" class="navbar__links">About Me</a>
         </li>
-        <li class="navbar__btn"> 
-          <a href="/pages/contactme.html" class="button">Connect With Me!</a>
+        <li class="navbar__btn">
+          <a href="contactme.html" class="button">Connect With Me!</a>
         </li>
       </ul>
     </div>
@@ -78,12 +79,12 @@
           <li>Implemented a clean and modern UI theme inspired by professional enterprise websites, with animated SVG backgrounds and smooth scroll effects.</li>
           <li>Utilized modular CSS and JavaScript for better maintainability and mobile responsiveness.</li>
           <li>Tested across multiple devices and browsers to ensure a consistent user experience and accessibility compliance.</li>
-          <li><a href="https://github.com/FrenchJake/personal-website.git" target="_blank" rel="noopener noreferrer">View source code</a></li>
+          <li><a href="https://github.com/FrenchJake/personal-website" target="_blank" rel="noopener noreferrer">View source code</a></li>
         </ul>
       </div>
     </div>
   </section>
 
-  <script src="/javascript/projects.js"></script>
+  <script src="../javascript/projects.js"></script>
 </body>
 </html>
