--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -4,39 +4,34 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Jake French | About Me</title>
-  <link rel="stylesheet" href="/design/aboutme.css" />
+  <link rel="stylesheet" href="../design/aboutme.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap" rel="stylesheet" />
 </head>
 <body>
   <nav class="navbar">
-        <div class="navbar__container">
-           <a href="/index.html" id="navbar__logo">
-            <img src="/images/JakeFrenchProfile.png" alt="Logo" class="navbar__logo-img" />Jake French</a>
-            <div class="navbar__toggle" id="mobile-menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
-            <ul class="navbar__menu">
-                <li class="navbar__item">
-                    <a href="/index.html" class="navbar__links">Home</a>
-                </li>
-                <li class="navbar__item">
-                    <a href="/pages/aboutme.html" class="navbar__links">About Me</a>
-                </li>
-                <li class="navbar__btn"> 
-                    <a href="/pages/contactme.html" class="button">Connect With Me!</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    <div class="navbar__container">
+      <a href="../index.html" id="navbar__logo">
+        <img src="../images/JakeFrenchProfile.png" alt="Logo" class="navbar__logo-img" />Jake French
+      </a>
+      <div class="navbar__toggle" id="mobile-menu">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
+      <ul class="navbar__menu">
+        <li class="navbar__item"><a href="../index.html" class="navbar__links">Home</a></li>
+        <li class="navbar__item"><a href="aboutme.html" class="navbar__links">About Me</a></li>
+        <li class="navbar__btn"><a href="contactme.html" class="button">Connect With Me!</a></li>
+      </ul>
+    </div>
+  </nav>
 
   <!-- About Me Section -->
   <section class="aboutme-section">
     <div class="aboutme-container">
       <div class="aboutme-image">
-        <img src="/images/aboutme/JakeFrenchHeadshot.jpg" alt="Jake French Headshot" />
+        <img src="../images/aboutme/JakeFrenchHeadshot.jpg" alt="Jake French Headshot" />
       </div>
       <div class="aboutme-content">
         <h1>About Me</h1>
@@ -48,7 +43,6 @@
     </div>
   </section>
 
-  
   <!-- Skills Section -->
   <section class="skills-modern">
     <div class="skills-container">
@@ -85,58 +79,44 @@
       </div>
     </div>
   </section>
-  
+
   <!-- Resume Section -->
   <section class="resume-section">
     <div class="resume-container">
       <h2>My Resume</h2>
-      <a href="/documents/JakobFrenchResume.pdf" target="_blank" download>
-        <img src="/images/aboutme/Resume.jpg" alt="Resume Preview" class="resume-preview" />
+      <a href="../documents/JakobFrenchResume.pdf" target="_blank" download>
+        <img src="../images/aboutme/Resume.jpg" alt="Resume Preview" class="resume-preview" />
       </a>
       <p class="resume-download-text">Click download full PDF</p>
     </div>
   </section>
-  
+
+  <!-- Footer -->
   <footer id="footer" class="footer__container">
-            <div class="footer__content">
-                <div class="footer__contact">
-                <h2>Contact Me</h2>
-                <a href="mailto:jakecfrench@gmail.com">
-                    <i class="fas fa-envelope"></i> jakecfrench@gmail.com
-                </a>
-                <a href="#" onclick="copyPhone(event)">
-                    <i class="fas fa-phone"></i> (224) - 548 - 1264
-                </a>
-                </div>
+    <div class="footer__content">
+      <div class="footer__contact">
+        <h2>Contact Me</h2>
+        <a href="mailto:jakecfrench@gmail.com"><i class="fas fa-envelope"></i> jakecfrench@gmail.com</a>
+        <a href="#" onclick="copyPhone(event)"><i class="fas fa-phone"></i> (224) - 548 - 1264</a>
+      </div>
 
-                <div class="footer__social">
-                <h2>Connect</h2>
-                <a
-                    href="https://www.linkedin.com/in/jakefrench/"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                >
-                    <i class="fab fa-linkedin"></i> LinkedIn
-                </a>
-                <a
-                    href="https://github.com/FrenchJake"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                >
-                    <i class="fab fa-github"></i> GitHub
-                </a>
-                </div>
-            </div>
+      <div class="footer__social">
+        <h2>Connect</h2>
+        <a href="https://www.linkedin.com/in/jakefrench/" target="_blank" rel="noopener noreferrer">
+          <i class="fab fa-linkedin"></i> LinkedIn
+        </a>
+        <a href="https://github.com/FrenchJake" target="_blank" rel="noopener noreferrer">
+          <i class="fab fa-github"></i> GitHub
+        </a>
+      </div>
+    </div>
 
-            <div class="footer__bottom">
-                <a href="/" class="footer__logo">
-                <i class="fas fa-gem"></i> Jake French
-                </a>
-                <p class="website__rights">© Jake French 2025. All rights reserved.</p>
-            </div>
-    </footer>
+    <div class="footer__bottom">
+      <a href="../index.html" class="footer__logo"><i class="fas fa-gem"></i> Jake French</a>
+      <p class="website__rights">© Jake French 2025. All rights reserved.</p>
+    </div>
+  </footer>
 
-
-  <script src="/javascript/aboutme.js"></script>
+  <script src="../javascript/aboutme.js"></script>
 </body>
 </html>
