--- a/pages/softwareDev.html
+++ b/pages/softwareDev.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Jakes Website</title>
-  <link rel="stylesheet" href="/design/softwareDev.css" />
+  <link rel="stylesheet" href="../design/softwareDev.css" />
   <link
     rel="stylesheet"
     href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
@@ -18,27 +18,28 @@
 </head>
 <body>
   <nav class="navbar">
-        <div class="navbar__container">
-           <a href="/index.html" id="navbar__logo">
-            <img src="/images/JakeFrenchProfile.png" alt="Logo" class="navbar__logo-img" />Jake French</a>
-            <div class="navbar__toggle" id="mobile-menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
-            <ul class="navbar__menu">
-                <li class="navbar__item">
-                    <a href="/index.html" class="navbar__links">Home</a>
-                </li>
-                <li class="navbar__item">
-                    <a href="/pages/aboutme.html" class="navbar__links">About Me</a>
-                </li>
-                <li class="navbar__btn"> 
-                    <a href="/pages/contactme.html" class="button">Connect With Me!</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    <div class="navbar__container">
+      <a href="../index.html" id="navbar__logo">
+        <img src="../images/JakeFrenchProfile.png" alt="Logo" class="navbar__logo-img" />Jake French
+      </a>
+      <div class="navbar__toggle" id="mobile-menu">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
+      <ul class="navbar__menu">
+        <li class="navbar__item">
+          <a href="../index.html" class="navbar__links">Home</a>
+        </li>
+        <li class="navbar__item">
+          <a href="aboutme.html" class="navbar__links">About Me</a>
+        </li>
+        <li class="navbar__btn">
+          <a href="contactme.html" class="button">Connect With Me!</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
   <!-- Hero Section -->
   <section class="hero-education" aria-label="Page Introduction">
@@ -69,8 +70,7 @@
         <li>Collaborated cross functionally with UI/UX designers, QA testers, and client stakeholders to build features that directly serve both agency workers and citizens.</li>
         <li>Championed clean code standards and version control practices across the development team, leading peer reviews and contributing to long term maintainability.</li>
       </ul>
-  </article>
-
+    </article>
 
     <article class="education-card" tabindex="0" aria-labelledby="company-info">
       <h2 id="company-info">What is Fast Enterprises?</h2>
@@ -78,6 +78,6 @@
     </article>
   </main>
 
-  <script src="/javascript/softwareDev.js"></script>
+  <script src="../javascript/softwareDev.js"></script>
 </body>
 </html>
