--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
       <div class="main__content">
         <h1>All About</h1>
         <h2>Jake French</h2>
-        <p>See what makes me different.</p>
-        <button class="main__btn"><a href="pages/aboutme.html">Click Here</a></button>
+        <p>Builder, Fixer, Engineer</p>
+        <button class="main__btn"><a href="pages/aboutme.html">Learn More</a></button>
       </div>
       <div class="main__img--container">
         <img src="images/homepage/FrenchHome.png" alt="pic" id="main__img" />
@@ -51,11 +51,11 @@
   </main>
 
   <section id="services" class="services">
-    <h1>See what the hype is about</h1>
+    <h1>My Journey So Far</h1>
     <div class="services__container">
       <a href="pages/softwareDev.html" class="services__card" tabindex="0" role="button">
         <h2>Software Developer</h2>
-        <p>Fast Enterprises, Full-Stack Development</p>
+        <p>Full-Stack Development</p>
       </a>
 
       <a href="pages/education.html" class="services__card" tabindex="0" role="button">
@@ -65,7 +65,7 @@
 
       <a href="pages/experiences.html" class="services__card" tabindex="0" role="button">
         <h2>Professional Experiences</h2>
-        <p>Kirkland & Ellis, MAX Digital, Cubs</p>
+        <p>Fast Enterprises, Kirkland & Ellis, MAX Digital, Cubs</p>
       </a>
 
       <a href="pages/projects.html" class="services__card" tabindex="0" role="button">
