--- a/pages/experiences.html
+++ b/pages/experiences.html
@@ -53,6 +53,21 @@
   <section class="education-section">
 
     <div class="education-card">
+      <h2>Fast Enterprises, Denver CO</h2>
+      <p><strong>Title:</strong> Software Developer<br />
+      <strong>Duration:</strong> August 2023 – June 2025</p>
+      <div class="uni-description">
+        <ul>
+          <li>Core contributor on a brand new Child Support application for state agencies and public users.</li>
+          <li>Developed secure, scalable features in C#, Java, and SQL as part of a fast paced Agile team.</li>
+          <li>Engineered backend tools for data migration, encryption, reporting, and workflow automation.</li>
+          <li>Led bug fixing efforts and collaborated cross functionally with designers, QA, and stakeholders.</li>
+        </ul>
+        <p><a href="softwareDev.html" class="read-more-link">Read more about my full experience</a></p>
+      </div>
+    </div>
+
+    <div class="education-card">
       <h2>Kirkland & Ellis, Chicago IL</h2>
       <p><strong>Title:</strong> Knowledge Services and IT Intern<br />
       <strong>Duration:</strong> June 2022 – August 2022</p>
