Updated resume with certificates

--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -51,10 +51,12 @@
         <div class="skills-column">
           <h3>Languages</h3>
           <ul>
-            <li>JavaScript</li>
-            <li>C++</li>
-            <li>C#</li>
             <li>Java</li>
+            <li>JavaScript</li>
+            <li>Python</li>
+            <li>C#</li>
+            <li>C++</li>
+            <li>CSS</li>
             <li>HTML</li>
             <li>SQL</li>
           </ul>
@@ -69,10 +71,11 @@
         <div class="skills-column">
           <h3>Tools & Platforms</h3>
           <ul>
+            <li>AWS Certified Cloud Practitioner</li>
             <li>PostgreSQL</li>
             <li>MS Systems</li>
-            <li>Google Workspace</li>
             <li>Adobe XD</li>
+            <li>Google Workspace</li>
             <li>Slack</li>
           </ul>
         </div>
@@ -85,7 +88,7 @@
     <div class="resume-container">
       <h2>My Resume</h2>
       <a href="../documents/JakobFrenchResume.pdf" target="_blank" download>
-        <img src="../images/aboutme/Resume.jpg" alt="Resume Preview" class="resume-preview" />
+        <img src="../images/aboutme/JakobFrenchResume.png" alt="Resume Preview" class="resume-preview" />
       </a>
       <p class="resume-download-text">Click download full PDF</p>
     </div>
