--- a/pages/education.html
+++ b/pages/education.html
@@ -83,11 +83,27 @@
       <p>
         I'm currently pursuing cloud-based knowledge through AWS and constantly seeking new tools and technologies to grow professionally.
       </p>
-      <div>
-        <span class="badge">AWS Cloud Practitioner – In Progress</span>
-        <span class="badge">Google Data Analytics – Planned</span>
+      <div class="badges-container">
+        <div class="badge-wrapper">
+          <span class="badge-title">AWS Cloud Practitioner</span>
+          <a href="https://www.credly.com/badges/a6b616a6-f8ca-4c7d-843c-9441bbaf5a30/linked_in_profile" target="_blank" class="badge badge-img">
+            <img src="../images/educationpage/cloudPractitioner.png" alt="AWS Cloud Practitioner Badge"/>
+          </a>
+        </div>
+        <div class="badge-wrapper">
+          <span class="badge-title">CS50 Python Course</span>
+          <a href="" target="_blank" class="badge badge-img">
+            <img src="../images/educationpage/Harvard.png" alt="CS50 Python Course from Harvard University"/>
+          </a>
+        </div>
+        <div class="badge-wrapper">
+          <span class="badge-title">CS50 Intro to AI</span>
+          <span class="badge">CS50 Introduction to AI Course from Harvard University - Planned</span>
+        </div>
       </div>
     </div>
+
+
   </section>
 
   <script src="../javascript/education.js"></script>
