--- a/pages/education.html
+++ b/pages/education.html
@@ -91,14 +91,16 @@
           </a>
         </div>
         <div class="badge-wrapper">
-          <span class="badge-title">CS50 Python Course</span>
-          <a href="" target="_blank" class="badge badge-img">
+          <span class="badge-title">CS50 Programming with Python</span>
+          <a href="https://certificates.cs50.io/e26e90e9-8c14-44b0-8790-0d16aa8d772a.pdf?size=letter" target="_blank" class="badge badge-img">
             <img src="../images/educationpage/Harvard.png" alt="CS50 Python Course from Harvard University"/>
           </a>
         </div>
         <div class="badge-wrapper">
-          <span class="badge-title">CS50 Intro to AI</span>
-          <span class="badge">CS50 Introduction to AI Course from Harvard University - Planned</span>
+          <span class="badge-title">CS50 Intro to AI (planned)</span>
+          <a href="" target="_blank" class="badge badge-img">
+            <img src="../images/educationpage/Harvard.png" alt="CS50 Python Course from Harvard University"/>
+          </a>
         </div>
       </div>
     </div>
