--- a/pages/experiences.html
+++ b/pages/experiences.html
@@ -58,10 +58,12 @@
       <strong>Duration:</strong> August 2023 – June 2025</p>
       <div class="uni-description">
         <ul>
-          <li>Core contributor on a brand new Child Support application for state agencies and public users.</li>
-          <li>Developed secure, scalable features in C#, Java, and SQL as part of a fast paced Agile team.</li>
-          <li>Engineered backend tools for data migration, encryption, reporting, and workflow automation.</li>
-          <li>Led bug fixing efforts and collaborated cross functionally with designers, QA, and stakeholders.</li>
+          <li>Partnered with state agencies to deliver enterprise software solutions for a Child Support application, gathering requirements and designing technical solutions aligned with client business goals.</li>
+          <li>Drove full-stack development of enterprise software solutions for the Child Support application using object-oriented principles in C#, contributing to the design, implementation, and delivery of core functionality in alignment with client requirements within an Agile development lifecycle</li>
+          <li>Co-developed “Archie,” an AI-powered chatbot to improve customer support for Child Support users. Wrote and optimized SQL queries for backend data processing, ensuring high performance and reliability across large-scale data operations through web requests.</li>
+          <li>Implemented data governance standards by reconfiguring sensitive data handling by standardizing tokenization and encryption methods for Social Security Numbers to maintain strict privacy compliance.</li>
+          <li>Led efforts in System Integration Testing (SIT) & Unit Testing to validate end-to-end functionality, identify defects, and ensure smooth system performance across modules.</li>
+          <li>Identified and resolved more errors/bugs than all other developers combined during the testing phase, establishing a reputation as the team’s most effective bug finder.</li>
         </ul>
         <p><a href="softwareDev.html" class="read-more-link">Read more about my full experience</a></p>
       </div>
@@ -73,9 +75,9 @@
       <strong>Duration:</strong> June 2022 – August 2022</p>
       <div class="uni-description">
         <ul>
-          <li>Assisted with the transition from legacy 2013 software to updated 2019 systems, improving firm performance.</li>
-          <li>Collaborated with the IT department to develop internal database request forms, enhancing partner access to data.</li>
-          <li>Conducted legal and business research for litigation teams using analytical tools and diverse data sources.</li>
+          <li>Supported firm-wide transition from legacy 2013 software systems to updated 2019 operating systems, improving overall performance. </li>
+          <li>Partnered with the IT department to build internal database request forms with front-end tools to streamline firm-wide data access. </li>
+          <li>Provided detailed business and legal research for litigation teams using various analytical tools and data sources. </li>
         </ul>
       </div>
     </div>
@@ -86,15 +88,14 @@
       <strong>Duration:</strong> May 2021 – August 2021</p>
       <div class="uni-description">
         <ul>
-          <li>Updated and maintained dealership data for over 2,000 Chicagoland entries using Excel and Google Sheets.</li>
-          <li>Developed a more efficient access system for dealership data, increasing usability across 500 dealerships.</li>
-          <li>Helped clean and restructure outdated internal data systems for modern use.</li>
+          <li>Cleaned and restructured 2,000+ dealership datasets in Excel and Google Sheets modernizing data workflows for approximately 500 car dealerships in the Chicago land area.</li>
+          <li>Played a key role in cleaning, restructuring, and modernizing the company’s outdated data systems.</li>
         </ul>
       </div>
     </div>
 
     <div class="education-card">
-      <h2>Levy, Chicago IL — Chicago Cubs</h2>
+      <h2>Levy, Chicago Cubs - Chicago IL</h2>
       <p><strong>Title:</strong> Vendor<br />
       <strong>Duration:</strong> May 2017 – July 2021</p>
       <div class="uni-description">
@@ -105,6 +106,16 @@
       </div>
     </div>
 
+    <div class="education-card">
+      <h2>Chicago Med, Chicago IL</h2>
+      <p><strong>Title:</strong> Actor<br />
+      <div class="uni-description">
+        <ul>
+          <li>As a fun side gig, when available, I worked as an extra on the set of Chicago Med.</li>
+          <li>Enjoyed the experience of being on set and seeing how a TV show is produced.</li>
+        </ul>
+      </div>
+    </div>
   </section>
 
   <script src="../javascript/experiences.js"></script>
