--- a/pages/projects.html
+++ b/pages/projects.html
@@ -55,7 +55,7 @@
     <div class="education-card">
       <h2>Professor & TA Scheduling System</h2>
       <p>
-        <strong>Technology:</strong> React Native<br/>
+        <strong>Technology:</strong> React Native, JavaScript, HTML, CSS, & SQL<br/>
         <strong>Company:</strong> University of Alabama
       </p>
       <div class="uni-description">
@@ -71,7 +71,7 @@
     <div class="education-card">
       <h2>Built Personal Website</h2>
       <p>
-        <strong>Technology:</strong> HTML, JavaScript, & CSS
+        <strong>Technology:</strong> JavaScript, HTML, & CSS
       </p>
       <div class="uni-description">
         <ul>
@@ -80,6 +80,21 @@
           <li>Utilized modular CSS and JavaScript for better maintainability and mobile responsiveness.</li>
           <li>Tested across multiple devices and browsers to ensure a consistent user experience and accessibility compliance.</li>
           <li><a href="https://github.com/FrenchJake/personal-website" target="_blank" rel="noopener noreferrer">View source code</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="education-card">
+      <h2>Harvard Python Course</h2>
+      <p>
+        <strong>Technology:</strong> Python
+      </p>
+      <div class="uni-description">
+        <ul>
+          <li>Completed the CS50 Python course from Harvard University, gaining a solid foundation in Python programming.</li>
+          <li>Learned key programming concepts including data structures, algorithms, and object-oriented programming.</li>
+          <li>Built several projects including a mini casino, restaurant tip analyzer, and bitcoin analyzer using an API.</li>
+          <li><a href="https://github.com/code50/216613138" target="_blank" rel="noopener noreferrer">View source code</a></li>
         </ul>
       </div>
     </div>
